Add CLIP example predictions with weights.

--- a/index.html
+++ b/index.html
@@ -245,6 +245,9 @@ src="https://www.youtube.com/embed/lbaqjJJMAFg">
                 <p class="text-justify">
                     We also study the tradeoff between relabeled instruction accuracy, augmented dataset size, and downstream policy performance. Emperically, we find that the Finetuned CLIP model we utilize becomes very uncertain after the initial few hindsight label predictions; we propose two instruction prediction methods, and find that the more conservative approach is able to strike a balance between producing rich instruction augmentations while still providing accurate supervision signal for the control policy. For more details on this analysis and experimental results, please refer to the full paper.
                 </p>
+                <p style="test-align:center;">
+                    <image src="img/instructions_example.png"  class="image-responsive" width="100%">
+                </p>
 	    </div>
         </div>
             
