--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ src="https://www.youtube.com/embed/lbaqjJJMAFg">
                 <p class="text-justify">
                 The authors would like to thank Kanishka Rao, Debidatta Dwibedi, Pete Florence, Yevgen Chebotar, Fei Xia, and Corey Lynch for valuable feedback and discussions. We would also like to thank Emily Perez, Dee M,
 Clayton Tan, Jaspiar Singh, Jornell Quiambao, and Noah Brown for navigating the ever-changing
-challenges of data collection and robot policy evaluation at scale. Finally, we would like to thank the
+challenges of data collection and robot policy evaluation at scale. Additionally, Tom Small designed informative animations to visualize DIAL. Finally, we would like to thank the
 large team that built SayCan, upon which we develop DIAL.
                     <br><br>
                 The website template was borrowed from <a href="http://jonbarron.info/">Jon Barron</a>.
