--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="container" id="main">
         <div class="row">
             <h2 class="col-md-12 text-center">
-                Robotic Skill Acquistion via Instruction Augmentation </br>  with Vision-Language Models </br> 
+                Robotic Skill Acquisition via Instruction Augmentation </br>  with Vision-Language Models </br> 
                 <small>
                     Preprint
                 </small>
