Update acceptance at RSS 2023

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h2 class="col-md-12 text-center">
                 Robotic Skill Acquisition via Instruction Augmentation </br>  with Vision-Language Models </br> 
                 <small>
-                    Preprint
+                    RSS 2023
                 </small>
             </h2>
         </div>
@@ -263,8 +263,8 @@ src="https://www.youtube.com/embed/lbaqjJJMAFg">
 @inproceedings{xiao2022robotic,
   title={Robotic Skill Acquistion via Instruction Augmentation with Vision-Language Models},
   author={Xiao, Ted and Chan, Harris and Sermanet, Pierre and Wahid, Ayzaan and Brohan, Anthony and Hausman, Karol and Levine, Sergey and Tompson, Jonathan},
-  booktitle={Workshop on Language and Robotics at CoRL 2022},
-  year={2022}
+  booktitle={Proceedings of Robotics: Science and Systems},
+  year={2023}
 }</textarea>
                 </div>
             </div>
