--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h2 class="col-md-12 text-center">
                 Robotic Skill Acquisition via Instruction Augmentation </br>  with Vision-Language Models </br> 
                 <small>
-                    RSS 2023
+                    To Appear at RSS 2023
                 </small>
             </h2>
         </div>
